# electronic

./: README.md  env.example  pyproject.toml
config/: settings.py  urls.py
suppliers/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
suppliers/migrations/: 0001_initial.py  0002_product.py
users/migrations/: 0001_initial.py
